Linuxのファイルシステムにて、/sys, /dev (/dev/shmを除く), /runのディスク使用量・i-node使用量を、 取得しないようにrocusagentへ追加。rocusesmanagerの同機能を削除。

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,11 @@
 
 	* メモリ使用量のグラフを作成する機能を追加
 
+	* Linuxのused_memoryにcache_memoryとbuffer_memoryを含まないように修正
+
+	* Linuxのファイルシステムの使用量・i-nodeの使用量を取得する対象に
+	/dev/(/dev/shmを除く), /sys, /run, /mediaを含まないように変更
+
 2013-02-12  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* Load Averageを/proc/loadavgから取得するように変更
