PageIOのグラフを作成する機能を追加

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	* Linuxのファイルシステムの使用量・i-nodeの使用量を取得する対象に
 	/dev/(/dev/shmを除く), /sys, /run, /mediaを含まないように変更
 
+	* PageIOのグラフを作成する機能を追加
+
 2013-02-12  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* Load Averageを/proc/loadavgから取得するように変更
