トラフィックのグラフを作成する機能を追加

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-17  Toshifumi Sakaguchi  <sischkg@gmail.com>
+
+	* トラフィックのグラフを作成する機能を追加
+
 2013-02-15  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* ファイルシステムの使用量のグラフを作成する機能を追加
