Linuxのファイルシステムの使用量・i-nodeの使用量を取得する対象に /dev,/runを含んでいた件を修正

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* トラフィックのグラフを作成する機能を追加
 
+	* Linuxのファイルシステムの使用量・i-nodeの使用量を取得する対象に
+	/dev,/runを含んでいた件を修正
+
 2013-02-15  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* ファイルシステムの使用量のグラフを作成する機能を追加
