DiskIOのグラフを作成する機能を追加 RRDファイルを作成・更新失敗時にログファイルへメッセージを出力するように修正

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
 
 	* rocusagentのupstart設定ファイルを追加
 
+	* DiskIOのグラフを作成する機能を追加
+
+	* RRDファイルを作成・更新失敗時にログファイルへメッセージを出力するように修正
+
 2013-02-15  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* ファイルシステムの使用量のグラフを作成する機能を追加
