--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 	* DiskIOのデータソースのタイプをCOUNTERへ修正
 
+	* DiskIO/LinuxDiskIOのグラフを修正
+
 2013-02-17  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* トラフィックのグラフを作成する機能を追加
