--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-24  Toshifumi Sakaguchi  <STF1-Sakaguchi-T@marubeni-sys.com>
+
+	* OpenLDAPの接続数、Operation数、キャッシュエントリ数を取得・グラフ化する機能を追加
+
 2013-06-10  Toshifumi Sakaguchi  <toshi@mobile02>
 
 	* GraphTemplateをカテゴリに分類し、カテゴリ名を返すメソッド#categoryを追加
