ChangeLog内のメールアドレスを修正

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,18 +1,18 @@
-2013-06-26  Toshifumi Sakaguchi  <toshi@devel>
+2013-06-26  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* rndcのPATH、statistics-fileのPATHを、設定ファイルから変更できる機能を追加
 
-2013-06-24  Toshifumi Sakaguchi  <STF1-Sakaguchi-T@marubeni-sys.com>
+2013-06-24  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* OpenLDAPの接続数、Operation数、キャッシュエントリ数を取得・グラフ化する機能を追加
 
 	* CPU使用率のグラフが表示できなかった件を修正
 
-2013-06-10  Toshifumi Sakaguchi  <toshi@mobile02>
+2013-06-10  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* GraphTemplateをカテゴリに分類し、カテゴリ名を返すメソッド#categoryを追加
 
-2013-06-09  Toshifumi Sakaguchi  <toshi@mobile02>
+2013-06-09  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* GraphTemplateを識別するためのメソッドgraph_idを追加
 
@@ -20,11 +20,11 @@
 
 	* ResourceへOpenLDAPの統計情報を追加
 
-2013-05-26  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-05-26  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* BIND cacheのグラフにて、レコードごとに線のスタイルを設定した。
 
-2013-05-23  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-05-23  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* Bind CacheのグラフにResource Typeを表示できなかった点を修正
 
@@ -34,13 +34,13 @@
 
 	* Bind Cacheのグラフを作成する機能を追加
 
-2013-05-22  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-05-22  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* Bind Cache情報を取得できない点を修正
 
 	* BIND Cache の統計情報を取得する機能を追加
 
-2013-05-20  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-05-20  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* Bindの統計情報をRRDファイルへ保存できない件を修正
 
@@ -51,80 +51,80 @@
 
 	* init用の起動スクリプトを追加
 
-2013-05-19  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-05-19  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* BINDのName Sever Statisticsのグラフを表示する機能を追加
 
 	* BINDの統計情報を取得する機能をエージェントへ追加
 
-2013-05-03  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-05-03  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* PIDファイル/var/run/rocusagent.pidをrootの権限で作成するために、
 
 	* daemon化しPIDファイルを作成した後に、seteuid/setegidするように変更
 
-2013-04-22  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-04-22  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* rocuesmanagerからグラフ画像作成機能を削除
 
 	* leanup GraphTemplate::Manager.
 
-2013-04-21  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-04-21  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* Ubuntuでrocusagentのサービスを登録する手順を追加
 
-2013-04-20  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-04-20  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* RRDToolをマルチスレッドに対応
 
-2013-04-16  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-04-16  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* GraphTemplateのname()生成方法を変更
 
-2013-04-14  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-04-14  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* マネージャをroot以外で実行するようにインストール手順を修正
 
-2013-04-07  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-04-07  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* エージェント起動時に、ログ保存ディレクトリを作成する機能を追加
 
 	* インストールマニュアルへ、エージェント用ユーザ・グループを作成する手順を追加
 	* エージェントを専用ユーザ(rocus)で動作するように変更
 
-2013-03-31  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-03-31  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* エージェントの実行UID/GIDを設定ファイルに記述できるように変更
 
-2013-03-23  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-03-23  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* GraphTemplateManagerを別のファイルへ移動
 
 	* ファイル名を生成するときのエスケープ方法を統一
 
-2013-03-07  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-03-07  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* GraphTemplateを保存するように変更
 
-2013-03-07  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-03-07  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* targetsconfig設定サンプルのファイル名を修正
 
 	* DataSource関連をcleanup.
 
-2013-03-24  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-03-24  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* GraphTemplateのcleanup.
 
-2013-03-23  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-03-23  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* LinuxDiskIOQueueLengthのグラフの上限値を削除
 
-2013-02-22  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-02-22  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* グラフのフォーマットなどを修正
 
-2013-02-19  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-02-19  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* Raspbian “wheezy”対応を追加
 
@@ -132,7 +132,7 @@
 
 	* Load Averageのグラフを作成する機能を追加
 
-2013-02-19  Toshifumi Sakaguchi  <toshi@gmail.com>
+2013-02-19  Toshifumi Sakaguchi  <sischkg@gmail.com>
 
 	* 前提条件へrrdtool 1.4.xを追加
 
